--- a/users/templates/registration/login_form.html
+++ b/users/templates/registration/login_form.html
@@ -16,7 +16,7 @@
           </div>
 
           <div>
-              <a href="{% password_reset %}" class="txt1">
+              <a href="{% url 'password_reset' %}" class="txt1">
                   Forgot Password?
               </a>
           </div>
